--- a/index.html
+++ b/index.html
@@ -43,10 +43,20 @@
                 <div>
                     <ul  class="adr">
                         <li class="adr-item">
-                            <a class="adr-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <a class="adr-link" href="mailto:info@devstudio.com">
+                            <svg class="adr-icon">
+                                <use href="./images/icons.svg#envelope" aria-hidden="true"></use>
+                            </svg>
+                                info@devstudio.com
+                            </a>
                         </li>
                         <li class="adr-item">
-                            <a class="adr-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            <a class="adr-link" href="tel:+380961111111">
+                                <svg class="adr-icon">
+                                    <use href="./images/icons.svg#smartphone" aria-hidden="true"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -70,18 +80,30 @@
                 <!-- <h2>Наши преимущества</h2> -->
                 <ul class="benefits-list-inner">
                     <li class="benefits-list">
+                        <svg class="benefits-icon">
+                            <use href="./images/icons.svg#antenna" aria-hidden="true"></use>
+                        </svg>
                         <h3 class="benefits-title">Внимание к деталям</h3>
                         <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="benefits-list">
+                        <svg class="benefits-icon">
+                            <use href="./images/icons.svg#clock" aria-hidden="true"></use>
+                        </svg>
                         <h3 class="benefits-title">Пунктуальность</h3>
                         <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="benefits-list">
+                        <svg class="benefits-icon">
+                            <use href="./images/icons.svg#diagram" aria-hidden="true"></use>
+                        </svg>
                         <h3 class="benefits-title">Планирование</h3>
                         <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="benefits-list">
+                        <svg class="benefits-icon">
+                            <use href="./images/icons.svg#astronaut" aria-hidden="true"></use>
+                        </svg>
                         <h3 class="benefits-title">Современные технологии</h3>
                         <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
