--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div>
-                    <ul  class="adr">
+                    <ul class="adr">
                         <li class="adr-item">
                             <a class="adr-link" href="mailto:info@devstudio.com">
                             <svg class="adr-icon">
@@ -64,7 +64,7 @@
         </div>
     </header>
     <main>
-        <section class="first-head">
+        <section class="first-head overlay">
             <div class="container">
                 <!-- Шапка -->
                 <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
@@ -80,30 +80,38 @@
                 <!-- <h2>Наши преимущества</h2> -->
                 <ul class="benefits-list-inner">
                     <li class="benefits-list">
-                        <svg class="benefits-icon">
-                            <use href="./images/icons.svg#antenna" aria-hidden="true"></use>
-                        </svg>
+                        <div class="benefits-img">
+                            <svg class="benefits-icon">
+                                <use href="./images/icons.svg#antenna" aria-hidden="true"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Внимание к деталям</h3>
                         <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="benefits-list">
-                        <svg class="benefits-icon">
-                            <use href="./images/icons.svg#clock" aria-hidden="true"></use>
-                        </svg>
+                        <div class="benefits-img">
+                            <svg class="benefits-icon">
+                                <use href="./images/icons.svg#clock" aria-hidden="true"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Пунктуальность</h3>
                         <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="benefits-list">
-                        <svg class="benefits-icon">
-                            <use href="./images/icons.svg#diagram" aria-hidden="true"></use>
-                        </svg>
+                        <div class="benefits-img">
+                            <svg class="benefits-icon">
+                                <use href="./images/icons.svg#diagram" aria-hidden="true"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Планирование</h3>
                         <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="benefits-list">
-                        <svg class="benefits-icon">
-                            <use href="./images/icons.svg#astronaut" aria-hidden="true"></use>
-                        </svg>
+                        <div class="benefits-img">
+                            <svg class="benefits-icon">
+                                <use href="./images/icons.svg#astronaut" aria-hidden="true"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Современные технологии</h3>
                         <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -128,7 +136,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="team">
             <div class="container">
                 <h2 class="big-title">Наша команда</h2>
                 <!-- Team's fotos -->
@@ -139,6 +147,36 @@
                         />
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-text">Product Designer</p>
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-list">
                         <img 
@@ -146,6 +184,36 @@
                         />
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="team-text">Frontend Developer</p>
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-list">
                         <img 
@@ -153,6 +221,36 @@
                         />
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="team-text">Marketing</p>
+                        <ul  class="social-list">
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-list">
                         <img
@@ -160,31 +258,138 @@
                         />
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="team-text">UI Designer</p>
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="social-item">
+                                <button class="social-button">
+                                    <svg class="social-icon">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="clients">
+            <div class="container">
+                <h2 class="big-title">Постоянные клиенты</h2>
+                <ul class="clients-inner">
+                    <li class="client-box">
+                        <a href="#">
+                            <svg class="client-icon">
+                                 <use href="./images/icons.svg#union"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box">
+                        <svg class="client-icon">
+                            <use href="./images/icons.svg#logo5"></use>
+                        </svg>
+                    </li>
+                    <li class="client-box">
+                        <svg class="client-icon">
+                            <use href="./images/icons.svg#logo1"></use>
+                        </svg>
+                    </li>
+                    <li class="client-box">
+                        <svg class="client-icon">
+                            <use href="./images/icons.svg#logo2"></use>
+                        </svg>
+                    </li>
+                    <li class="client-box">
+                        <svg class="client-icon">
+                            <use href="./images/icons.svg#logo3"></use>
+                        </svg>
+                    </li>
+                    <li class="client-box">
+                        <svg class="client-icon">
+                            <use href="./images/icons.svg#logo4"></use>
+                        </svg>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-section">
             <!-- Нижняя линия -->
-            <a href="./index.html">
-               <span class="logo-first">Web</span>
-                <span class="logo-white">Studio</span>
-            </a>
-            <address>
-                <ul>
-                 <li class="address-li">
-                        <a class="address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <div>
+                <div>
+                    <a href="./index.html">
+                        <span class="logo-first">Web</span>
+                        <span class="logo-white">Studio</span>
+                    </a> 
+                </div>
+                <address>
+                    <ul>
+                        <li class="address-li">
+                            <a class="address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a class="address-link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li>
+                            <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <!-- Присоединяйтесь -->
+            <div class="come-on">
+                <h4 class="come-on-title">Присоединяйтесь</h4>
+                <ul class="come-on-list">
+                    <li class="come-on-box">
+                        <button class="come-on-button">
+                            <svg class="come-on-icon">
+                                <use href="./images/icons.svg#instagram"></use>
+                            </svg>
+                        </button>
                     </li>
-                    <li>
-                        <a class="address-link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="come-on-box">
+                        <button class="come-on-button">
+                            <svg class="come-on-icon">
+                                <use href="./images/icons.svg#twitter"></use>
+                            </svg>
+                        </button>
                     </li>
-                    <li>
-                     <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="come-on-box">
+                        <button class="come-on-button">
+                            <svg class="come-on-icon">
+                                <use href="./images/icons.svg#facebook"></use>
+                            </svg>
+                        </button>
+                    </li>
+                    <li class="come-on-box">
+                        <button class="come-on-button">
+                            <svg class="come-on-icon">
+                                <use href="./images/icons.svg#linkedin"></use>
+                            </svg>
+                        </button>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
