--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
                     <ul class="adr">
                         <li class="adr-item">
                             <a class="adr-link" href="mailto:info@devstudio.com">
-                            <svg class="adr-icon">
-                                <use href="./images/icons.svg#envelope" aria-hidden="true"></use>
-                            </svg>
+                                <svg class="adr-icon">
+                                    <use href="./images/icons.svg#envelope" aria-hidden="true"></use>
+                                </svg>
                                 info@devstudio.com
                             </a>
                         </li>
                         <li class="adr-item">
+                               
                             <a class="adr-link" href="tel:+380961111111">
-                                <svg class="adr-icon">
+                                 <svg class="adr-icon">
                                     <use href="./images/icons.svg#smartphone" aria-hidden="true"></use>
                                 </svg>
                                 +38 096 111 11 11
@@ -297,36 +298,46 @@
                 <h2 class="big-title">Постоянные клиенты</h2>
                 <ul class="clients-inner">
                     <li class="client-box">
-                        <a href="#">
+                        <a class="client-web" href="#">
                             <svg class="client-icon">
                                  <use href="./images/icons.svg#union"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-box">
-                        <svg class="client-icon">
-                            <use href="./images/icons.svg#logo5"></use>
-                        </svg>
+                        <a class="client-web" href="#">
+                            <svg class="client-icon">
+                                <use href="./images/icons.svg#logo5"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-box">
-                        <svg class="client-icon">
-                            <use href="./images/icons.svg#logo1"></use>
-                        </svg>
+                        <a class="client-web" href="#">
+                            <svg class="client-icon">
+                                <use href="./images/icons.svg#logo1"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-box">
-                        <svg class="client-icon">
-                            <use href="./images/icons.svg#logo2"></use>
-                        </svg>
+                        <a class="client-web" href="#">
+                            <svg class="client-icon">
+                                <use href="./images/icons.svg#logo2"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-box">
-                        <svg class="client-icon">
-                            <use href="./images/icons.svg#logo3"></use>
-                        </svg>
+                        <a class="client-web" href="#">
+                            <svg class="client-icon">
+                                <use href="./images/icons.svg#logo3"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-box">
-                        <svg class="client-icon">
-                            <use href="./images/icons.svg#logo4"></use>
-                        </svg>
+                        <a class="client-web" href="#">
+                            <svg class="client-icon">
+                                <use href="./images/icons.svg#logo4"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -347,10 +358,10 @@
                         <li class="address-li">
                             <a class="address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
-                        <li>
+                        <li  class="address-li">
                             <a class="address-link" href="mailto:info@example.com">info@example.com</a>
                         </li>
-                        <li>
+                        <li class="address-li">
                             <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
                         </li>
                     </ul>
