--- a/portfolio.html
+++ b/portfolio.html
@@ -187,10 +187,10 @@
                         <li class="address-li">
                             <a class="address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
-                        <li>
+                        <li class="address-li">
                             <a class="address-link" href="mailto:info@example.com">info@example.com</a>
                         </li>
-                        <li>
+                        <li class="address-li">
                             <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
                         </li>
                     </ul>
